--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,18 @@ code {
   margin: 30px;
 }
 
-.active {
-  color: red; 
+.active { 
   font-weight: 600;
+  width: 100%;
+  height: 100%;
+  color: orange;
+}
+
+.nav-item:hover {
+  background: #002147;
+  color: #fff;
+}
+.navbar {
+  background: #9d2eb2;
+  color: purple;
 }
